Update unit tests